# inplace_string

./: .gitignore  CMakeLists.txt  README.md
include/fp/: inplace_string.hpp
tests/: CMakeLists.txt  basic.cpp  construction.cpp  iterators.cpp
